--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BizAdConnect - Business & Advertising Platform</title>
+    <title>AdVerp - Business & Advertising Platform</title>
     <meta name="description" content="The most convenient platform for business and advertising interactions." />
-    <meta name="author" content="BizAdConnect" />
+    <meta name="author" content="AdVerp" />
     <meta property="og:image" content="/og-image.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap">
   </head>
